Fix Codeblock issues on Safari
Vertical line appeared different and Safari interact with the clipboard differently than other browsers -- Safari does not add extra \n.

--- a/module.css
+++ b/module.css
@@ -434,7 +434,7 @@ td
 	min-width: 25px;
 	text-align: right;
 	user-select: none;			/* standard but not used (might be fully implemented by now...) */
-/*	-webkit-user-select: none;  Chrome/Safari */        
+ 	-webkit-user-select: none;  /* Safari */         
 /*	-moz-user-select: none;  	 Firefox */
 /*	-ms-user-select: none;		 IE10+ */
 	margin-left: -13px;
@@ -442,9 +442,9 @@ td
 .noSelect
 {
 	user-select: none;			/* standard but not used */
-/*	-webkit-user-select: none;  Chrome/Safari        
-	-moz-user-select: none;  	 Firefox 
-	-ms-user-select: none;		 IE10+ */
+	-webkit-user-select: none;  /* Chrome/Safari  */      
+	/*-moz-user-select: none;  	 Firefox */
+	/*-ms-user-select: none;		 IE10+ */
 	outline-style: none;
 }
 .noCode
